--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,47 @@ http://maven.apache.org/maven-v4_0_0.xsd
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 	</build>
+	
+	<reporting>
+	    	<plugins>
+		      <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-pmd-plugin</artifactId>
+			<version>3.8</version>
+	      		</plugin>
+
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-report-plugin</artifactId>
+			<version>2.20</version>
+		</plugin>
+
+			  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<version>2.10.4</version>
+			<configuration>
+			  ...
+			</configuration>
+		      </plugin>   
+			<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-checkstyle-plugin</artifactId>
+				  <version>2.17</version>
+				  <reportSets>
+				    <reportSet>
+				      <reports>
+					<report>checkstyle</report>
+				      </reports>
+				    </reportSet>
+				  </reportSets>
+			</plugin>
+			    
+		     	<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jxr-plugin</artifactId>
+			<version>2.5</version>
+		      </plugin>
+		    </plugins>
+	</reporting>
 </project>
